add: weather background image

--- a/contents/basic/1.md
+++ b/contents/basic/1.md
@@ -18,3 +18,12 @@ Basic
 - iPhone 7 宽高比 375 x 667, 因此屏幕高度对应与 667 / 375 x 750 rpx = 1334 rpx
 - iPhone 7 Plus 宽高比 414 x 736，因此屏幕高度对应与 736 / 414 x 750 rpx = 1333.33 rpx
 - iPhone X 宽高比 375 x 812，因此屏幕高度对应与 812 / 375 x 750 rpx = 1624 rpx
+- 因为屏幕的宽度永远是 750 rpx, 我们可以很方便的设定各个视图的高和宽，而保证样式在各个屏幕中都不会变形
+
+### 行高和字号大小的关系
+
+- 行高 / 字号 = 1.4
+
+### 图片image的mode属性
+
+- scaleToFill : 不保持纵横比缩放图片，使图片的宽高完全拉伸至填满 image 元素
